I created new class CreateBoardValidationTest java class.