@@ -1,8 +1,10 @@
 package arguments.providers;
 
 import org.junit.jupiter.api.extension.ExtensionContext;
+import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.ArgumentsProvider;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.stream.Stream;
 
@@ -11,7 +13,8 @@ public class BoardNameValidationArgumentsProvider implements ArgumentsProvider {
     @Override
     public Stream provideArguments(ExtensionContext context){
         return Stream.of(
-                Map.of("name", 1234)
-        );
+                Map.of("name", 1234),
+                Collections.emptyMap()
+        ).map(Arguments::of);
     }
 }
